--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
         <div class="leaf left"></div>
         <div class="leaf right"></div>
     </div>
-    <a href="moon.html" class="link">Click here for a surprise</a>
+    <a href="Moon.html" class="link">Click here for a surprise</a>
 </body>
 </html>
